[tool.setuptools.packages.find]
where = ["src"]
include = ["ktest"]

[project]
name = "kstest"
version = '1.0.1'
authors = [{ name = "notoriouslogank", email = "logankdevemail@gmail.com" }]
description = "A dead-simple pure-Python serial port interface for testing crypto mining machines."
dependencies = ["pyserial <= 3.5", "rich <= 13.9.4"]
readme = "README.md"
requires-python = ">=3.10.12"

[project.urls]
Repository = "https://github.com/notoriouslogank/ktest.git"
Homepage = "https://github.com/notoriouslogank/ktest"
Issues = "https://github.com/notoriouslogank/ktest/issues"

